k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone
spec:
  selector:
    app.kubernetes.io/name: netflix-clone
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
  selector:
    app: netflix-clone 
    type: ClusteIP
